[project]
name = "vidtoolz-zoomtext"
version = "0.1.1"
description = "Zoom out the video and display text as caption."
readme = "README.md"
authors = [{ name = "Sukhbinder Singh" }]
license = { text = "Apache-2.0" }
classifiers = ["License :: OSI Approved :: Apache Software License"]
dependencies = ["vidtoolz", "vidtoolz-add-text"]

[project.urls]
Homepage = "https://github.com/sukhbinder/vidtoolz-zoomtext"
Changelog = "https://github.com/sukhbinder/vidtoolz-zoomtext/releases"
Issues = "https://github.com/sukhbinder/vidtoolz-zoomtext/issues"
CI = "https://github.com/sukhbinder/vidtoolz-zoomtext/actions"

[project.entry-points."vidtoolz_plugins"]
zoomtext = "vidtoolz_zoomtext:zoomtext_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
